_  :sparkles: Introducing new features - product details screen - _ created product details top bar

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,7 +1,8 @@
 {
-    "Authentication": {
-        "name": "الاسم",
-        "email": "البريد الالكتروني"
-    },
-    "hello": "مرحبًا بك"
+	"Authentication": {
+		"name": "الاسم",
+		"email": "البريد الالكتروني"
+	},
+	"hello": "مرحبًا بك",
+	"ProductDetailsScreen": "شاشة تفاصيل المنتج"
 }
