--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -7,7 +7,8 @@
 		"ProductDetailsScreen": "شاشة تفاصيل المنتج",
 		"ProductColor": ":اللون",
 		"Best": "الأفضل",
-		"ProductSize": "الحجم"
+		"ProductSize": "الحجم",
+		"BuyNow": "اشتري الان"
 	},
 	"hello": "مرحبًا بك"
 }
