--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -7,7 +7,8 @@
 		"ProductDetailsScreen": "Product Details Screen",
 		"ProductColor": "Color:",
 		"Best": "Best:",
-		"ProductSize": "Product Size"
+		"ProductSize": "Product Size",
+		"BuyNow": "Buy now"
 	},
 	"hello": "Hello"
 }
